--- a/index.html
+++ b/index.html
@@ -232,16 +232,14 @@
     <label for="paymentPhone" style="font-size: 14px;">고객 연락처</label>
     <input type="text" id="paymentPhone" placeholder="010-0000-0000" style="height: 36px; width: 100%; margin-top: 4px;">
   </div>
-  <div style="display: flex; flex-direction: column; justify-content: flex-end;">
+  <div style="display: flex; align-items: flex-end; height: 60px;">
     <button onclick="checkCustomer()" id="checkBtn" style="height: 36px;">확인</button>
   </div>
-  <div>
+  <div style="display: flex; align-items: flex-end; height: 60px;">
     <span id="customerLevel" style="font-size: 14px; color: gray; display: none;">[고객 등급]</span>
   </div>
 </div>
-    <div style="margin-top: 6px;">
-      <button onclick="openNewCustomerPopupFromPayment()" id="signupBtn" style="display: none;">신규</button>
-    </div>
+
 
     <!-- 생년월일/출생정보 영역은 기본 숨김 -->
     <div id="birthInfoSection" style="display: none;">
