--- a/index.html
+++ b/index.html
@@ -244,6 +244,9 @@
   <div class="popup-content">
     <h3>💳 결제창</h3>
 
+<div id="pointInfo" style="margin: 8px 0; font-size: 14px; color: gray;"></div>
+
+
   <!-- 고객 연락처 입력 + 확인 버튼 -->
 <div style="display: flex; align-items: center; gap: 8px;">
   <div style="flex: 1;">
