--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>에나타 상담 순서표</title>
+  <title>에나타 상담 순서표(v1.0)</title>
   <style>
 /* 💳 결제 팝업 스타일 */
 .popup {
@@ -329,3 +329,4 @@
 
 </body>
 </html>
+
